# PSIN_SAR_workflow

./: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_TEMPLATE.md  BUGFIX_TEMPLATE.md  CMakeLists.txt  CMakePresets.json  CODEBASE_MAP.md  CODEBASE_MAP_TEMPLATE.md  CODEX-README.md  PROJ_GPT_REVIEW.md  PROMPT_SNIPPETS.md  README.md  README_CODEX_WORKFLOW.md  REVIEW_CHECKLIST.md  TASK_TEMPLATE.md
bug/: BUGFIX_1.md  BUGFIX_2.md  BUGFIX_3.md  BUGFIX_4.md
cmake/toolchains/: zg330-aarch64.cmake
demo/: CMakeLists.txt  DEMO_SIMPLE_INFER_ARCHITECTURE.md  README.md  build_demo.sh
demo/include/: demo_config.hpp  image_collector.hpp  model_runner.hpp  result_writer.hpp
demo/src/: demo_config.cpp  demo_main.cpp  image_collector.cpp  model_runner.cpp  result_writer.cpp
demo/tests/: demo_config_test.cpp  image_collector_test.cpp  result_writer_test.cpp
docs/: API_REFERENCE.md  BUILD_GUIDE.md
docs/ZHUGE/: Part 0 env_setup.md  Part 1_1 quick-start_windows.md  Part 1_2 Icraft Terminology.md  Part 2_1 compile.md  Part 2_2 icraft tools.md  Part 3_1 runtime.md  Part 4 性能分析及优化.md  Part 5 fpga-op.md  readme.md
docs/ZHUGE/quantization_tricks/: quantization_tricks.md
docs/codex-manager/: CODEBASE_MAP_TEMPLATE.md  PROMPT_SNIPPETS.md  README_CODEX_WORKFLOW.md
docs/superpowers/plans/: 2026-04-27-demo-simple-infer.md
examples/0_HDMIshow/: CMakeLists.txt  README.md
examples/0_HDMIshow/configs/WIN/: double_dir+dump.yaml  double_dir+preview.yaml
examples/0_HDMIshow/configs/ZG/: double_dir+hdmi.yaml
examples/0_HDMIshow/include/: double_directory_input_actor.hpp  simple_yaml_config.hpp  unistd.h
examples/0_HDMIshow/src/: double_dir+hdmi.cpp
examples/0_datapath/PLin+HDMI/: CMakeLists.txt  README.md
examples/0_datapath/PLin+HDMI/configs/BY/: sdicamera+hdmi.yaml
examples/0_datapath/PLin+HDMI/configs/ZG/: sdicamera+hdmi.yaml
examples/0_datapath/PLin+HDMI/include/: globals.hpp
examples/0_datapath/PLin+HDMI/src/: sdicamera+hdmi.cpp
examples/1_input_ai_HDMI/: CMakeLists.txt
examples/1_input_ai_HDMI/configs/ZG/: imgpatch.yaml
examples/1_input_ai_HDMI/src/: imgpatch.cpp
examples/1_input_ai_save/: 1_generate_sar.py  1_generate_sar_io.py  README.md  ZGmodel_result_test_completed.py  datasets.py  infer.py  sample_qtest.py  sar_imaging.py  show_ZGinfet.py  t.py
examples/1_input_ai_save/configs/BY/: imgpatch.yaml
examples/1_input_ai_save/configs/ZG/: imgpatch.yaml
examples/1_input_ai_save/src/: imgpatch.cpp
examples/1_single_input+ai/PLin+SingleNet+HDMI/: CMakeLists.txt  README.md
examples/1_single_input+ai/PLin+SingleNet+HDMI/src/: sdicamera+yolov5+hdmi.cpp
examples/2_Full_workflow/: CMakeLists.txt  Host Computer Software.md  README.md  prompt.md
examples/2_Full_workflow/configs/: full_workflow.yaml  rd_imaging.yaml  sar_imaging.yaml
examples/2_Full_workflow/include/: full_workflow_hdmi_display.hpp
examples/2_Full_workflow/src/: full_workflow.cpp  rd_imaging_stream.cpp  sar_imaging.cpp
main/: CMakeLists.txt  Host Computer Software.md  README.md  build_full_workflow.sh  build_main.sh  prompt.md
main/configs/: infer_workflow.example.yaml  infer_workflow.yaml  rd_imaging.example.yaml  rd_imaging.yaml  web_console.example.yaml  web_console.yaml
main/include/: infer_workflow_hdmi_display.hpp
main/include/workflow/infer/: infer_config.hpp  infer_workflow.hpp  infer_workflow_internal.hpp  manual_flight_runtime.hpp
main/include/workflow/rd/: rd_config.hpp  rd_workflow.hpp
main/include/workflow/shared/: app_mode.hpp  config_utils.hpp  run_control.hpp
main/include/workflow/web/: web_console.hpp  web_console_config.hpp  web_console_controller.hpp  web_console_protocol.hpp  web_console_server.hpp
main/src/: config_utils.cpp  infer_config.cpp  infer_workflow.cpp  main.cpp  manual_flight_runtime.cpp  rd_config.cpp  rd_imaging_stream.cpp  web_console.cpp  web_console_assets.cpp  web_console_config.cpp  web_console_controller.cpp  web_console_protocol.cpp  web_console_server.cpp
main/src/infer/: output_sink.cpp  patch_planner.cpp  ui_render.cpp
main/tests/: hdmi_stopped_regression_test.cpp  infer_workflow_regression_test.cpp  main_menu_regression_test.cpp  manual_flight_runtime_test.cpp  web_console_boundary_regression_test.cpp  web_console_request_regression_test.cpp  web_console_settings_validation_test.cpp
task/: TASK_DEBUG.md  TASK_PHASE1.md  TASK_PHASE1_FIX1.md  TASK_PHASE1_FIX2.md  TASK_PHASE1_FIX3.md  TASK_PHASE1_FIX4.md  TASK_PHASE2.md  TASK_PHASE2_FIX1.md  TASK_PHASE3.md  TASK_PHASE3_FIX1.md  TASK_PHASE3_FIX2.md  TASK_PHASE3_FIX3.md  TASK_PHASE3_FIX4.md  TASK_PHASE4.md  TASK_PHASE4_FIX1.md  TASK_PHASE4_FIX2.md  TASK_REBUILE_01.md  TASK_REBUILE_02.md  TASK_REBUILE_03.md  TASK_REBUILE_04.md  TASK_REBUILE_05.md  TASK_REBUILE_06.md  TASK_REBUILE_06A.md  TASK_REBUILE_06B.md  TASK_REBUILE_06C.md  TASK_REBUILE_06D.md  TASK_REBUILE_07.md  TASK_REBUILE_08.md  TASK_REBUILE_09.md  TASK_REBUILE_10.md  TASK_REBUILE_11.md  TASK_REBUILE_SCHEDULE.md  TASK_TEMPLATE.md  TASK_module.md
tools/: build_all_examples.sh
